update from DS (1150)
版本: 1150
作者: chihwen
日期: 2013年6月17日 下午 08:55:55
訊息:
1. 避免在 jQuery UI Slider 未初始化前操作其方法 (scrollbar 特效)。
   調整 vertical.slider.js 及 horizontal-slider.js 始終初始化 slider 套件。
   以修正這段錯誤訊息 cannot call methods on slider prior to initialization; attempted to call method 'value'
2. 再進一步以隱藏 scrollbar 代替 destroy slider 特效，以避免誤擊上述錯誤。
3. 修正 JSLint 嚴格比對所產生的後遺症，以明確轉型後再比對作因應 (controller.js)。
4. 修正相關英文語系 (cms-settings.html, en.json, zh.json)。
issue 6428
----
異動 : /fakeapi/cms-settings.html
異動 : /fakeapi/javascripts/basic.js
異動 : /fakeapi/javascripts/channel.js
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/javascripts/epcurate.js
異動 : /fakeapi/javascripts/episode.js
異動 : /fakeapi/javascripts/index.js
異動 : /fakeapi/javascripts/libs/horizontal-slider.js
異動 : /fakeapi/javascripts/libs/horizontal-slider.min.js
異動 : /fakeapi/javascripts/libs/vertical.slider.js
異動 : /fakeapi/javascripts/libs/vertical.slider.min.js
異動 : /fakeapi/lang/en.json
異動 : /fakeapi/lang/zh.json

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4915 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -68,7 +68,7 @@
             "Can not connect to Facebook correctly!": "Can not connect to Facebook correctly!",
             "Please try again and make sure you agree on all permissions.": "Please try again and make sure you agree on all permissions.",
             "Account disconnected!": "Account disconnected!",
-            "{If you want to enable auto sharing again, please:}": "If you want to enable auto sharing again, please:<br /><br />1. Connect account<br />2. Enable auto sharing for each channel in Channel settings<br />3. publish new episode, 9x9.tv will auto share it<br />",
+            "{If you want to enable auto sharing again, please:}": "If you want to enable auto sharing again, please:<br /><br />1. Connect to account<br />2. Enable auto sharing for each channel in Channel settings<br />3. Publish a new episode, 9x9.tv will automatically share it<br />",
             "Disconnecting account will also disable auto sharing for every channel. Are you sure you want to disconnect?": "Disconnecting account will also disable auto sharing for every channel. Are you sure you want to disconnect?"
         },
         "button": {
@@ -345,7 +345,7 @@
             "If you signed in with Facebook, you can't change your name and password.": "If you signed in with Facebook, you can't change your name and password.",
             "Email": "Email",
             "Username": "Username",
-            "Username in 9x9 which composed of 6-16 English letters, numbers or low line.": "Username in 9x9 which composed of 6-16 English letters, numbers or low line.",
+            "Username in 9x9 which is composed of 6-16 English letters, numbers or low line.": "Username in 9x9 which is composed of 6-16 English letters, numbers or low line.",
             "Password": "Password",
             "Change password": "Change password",
             "Facebook": "Facebook",
