update from DS (1153)
版本: 1153
作者: chihwen
日期: 2013年6月18日 下午 02:43:16
訊息:
同步 src 版本 1152 以及 轉回 production SVN 版本 4918

1. 同步 src 版本 1152。
   調整 studio-nav 的樣式和結構，讓「Content Management System」的結構可以 p 和 span 並存。
issue 6337

2. 將 9x9 production SVN 版本 4918 轉回 fakeapi 分支。
   修正 PCS Channel store scrollbar 無法正確顯示 (同步 autoHeight() 調整)。
issue 5927
----
異動 : /fakeapi/channel-add.html
異動 : /fakeapi/channel-poi.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/cms-settings.html
異動 : /fakeapi/episode-list.html
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/basic.js
異動 : /fakeapi/lang/en.json
異動 : /fakeapi/stylesheets/style.css

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4922 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,8 +6,8 @@
         "Log out": "Log out"
     },
     "studio-nav": {
-        "CMS": "<span class=\"cms-icon\">CMS</span><p class=\"sub-title\">Content Management System</p>",
-        "CMSContent Management System": "<span class=\"cms-icon\">CMS</span><p class=\"sub-title\">Content Management System</p>",
+        "CMS": "<span class=\"cms-icon\">CMS</span><span class=\"sub-title\">Content Management System</span>",
+        "CMSContent Management System": "<span class=\"cms-icon\">CMS</span><span class=\"sub-title\">Content Management System</span>",
         "My Channels": "My Channels",
         "My Portal": "My Portal",
         "CMS Settings": "<img src=\"images/icon_studio_setup.png\" alt=\"\" />CMS Settings",
