版本: 5117 作者: Mars 日期: 2013/7/19 14:12 訊息: 修改 cms 4.0 優化列表 row 25 / 26 / 27 1. Channel "Thumbnail"文字改為"Channel logo" 2. Channel title 文字欄下方提示文："Best within 10 characters"    文字欄右邊會有計算的數字提示，預設0，會隨著文字輸入數由小到大，例如1, 2, 3, 4, 5 ....... 3. Channel description 文字欄下方提示文："Best within 52 characters"    文字欄右邊會有計算的數字提示，預設0，會隨著文字輸入數由小到大，例如1, 2, 3, 4, 5 ....... ---- 異動 : /channel-setting.html 異動 : /channel-add.html 異動 : /javascripts/v2/func.channel.js 異動 : /javascripts/v3/func.channel.js 異動 : /lang/en.json 異動 : /lang/zh.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5117 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -391,14 +391,14 @@
         },
         "setting-form": {
             "Title": "Title",
-            "Best within 20 characters": "Best within 20 characters",
-            "Thumbnail": "Thumbnail",
+            "Best within 10 characters": "Best within 10 characters",
+            "Channel logo": "Channel logo",
             "Upload": "Upload",
             "Uploading...": "Uploading...",
             "Better results with 300x300 or higher resolution image": "Better results with 300x300 or higher resolution image",
             "Please upload jpeg, png, or gif files.": "Please upload jpeg, png, or gif files.",
             "Description": "Description",
-            "Best within 70 characters": "Best within 70 characters",
+            "Best within 52 characters": "Best within 52 characters",
             "Channel language": "Channel language",
             "Select a language": "Select a language",
             "English": "English",
