--- a/lang/zh.json
+++ b/lang/zh.json
@@ -391,14 +391,14 @@
         },
         "setting-form": {
             "Title": "名稱",
-            "Best within 20 characters": "建議20字以內",
-            "Thumbnail": "圖示",
+            "Best within 10 characters": "建議10字以內",
+            "Channel logo": "頻道商標",
             "Upload": "上傳",
             "Uploading...": "上傳中...",
             "Better results with 300x300 or higher resolution image": "建議圖片解析度為300x300或以上",
             "Please upload jpeg, png, or gif files.": "請上傳jpeg, png或gif檔。",
             "Description": "介紹",
-            "Best within 70 characters": "建議70字以內",
+            "Best within 52 characters": "建議52字以內",
             "Channel language": "頻道語言",
             "Select a language": "選擇語言",
             "English": "English",
