版本: 5167 作者: mars 日期: 2013/7/26 17:34 訊息: 修改 episode list use invalid youtube video check ---- 異動 : /episode-list.html 異動 : /javascripts/v3/func.episode.js 異動 : /javascripts/v3/domready.episode.js 異動 : /lang/en.json 異動 : /lang/zj.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5167 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -524,8 +524,11 @@
             "<strong>Curate online videos</strong> into each single episode.": "<strong>Curate online videos</strong> into each single episode.",
             "Tell your story by <strong>arranging the video sequence.</strong>": "Tell your story by <strong>arranging the video sequence.</strong>",
             "<strong>Trim the videos and add titles</strong> to make your episodes more intriguing.": "<strong>Trim the videos and add titles</strong> to make your episodes more intriguing.",
-            "<strong>Schedule your episodes,</strong> and 9x9 will publish the episodes automatically.": "<strong>Schedule your episodes,</strong> and 9x9 will publish the episodes automatically."
-        }
+            "<strong>Schedule your episodes,</strong> and 9x9 will publish the episodes automatically.": "<strong>Schedule your episodes,</strong> and 9x9 will publish the episodes automatically.",
+            "Video check": "Video check",
+            "No video has problem": "No video has problem",
+            "Find ? video has problem.": "Find {0} video has problem.",
+            "Find ? videos have problem.": "Find {0} videos have problem."        }
     },
     "epcurate-publish": {
         "html-title": {
