版本: 5172 作者: yifan 日期: 2013/7/29 11:11 訊息: * Revised html template for invalid video. * Revised invalid video checking module comments and logic. * Refactored video adding validity check with cms.youtube-utility.js module. * Implemented horizontal scrollbar adding video behavior using perfect scrollbar plugin. * Added multi-lang text. ---- #  modified:   epcurate-curation.html #  modified:   javascripts/v3/cms.youtube-utility.js #  modified:   javascripts/v3/domready.curation.js #  modified:   javascripts/v3/func.curation.js #  modified:   lang/en.json #  modified:   lang/zh.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5180 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -593,7 +593,8 @@
             "Invalid URL, please try again!": "Invalid URL, please try again!",
             "Fail to add this video, please try another one.<br />[This video is not playable outside Youtube]": "Fail to add this video, please try another one.<br />[This video is not playable outside Youtube]",
             "Fail to add this video, please try another one.<br />[This video is not playable on mobile device]": "Fail to add this video, please try another one.<br />[This video is not playable on mobile device]",
-            "Fail to add this video, please try another one.<br />[This is a private video]": "Fail to add this video, please try another one.<br />[This is a private video]"
+            "Fail to add this video, please try another one.<br />[This is a private video]": "Fail to add this video, please try another one.<br />[This is a private video]",
+            "Unplayable video, please try again!": "Unplayable video, please try again!"
         },
         "video-info": {
             "Original": "Original",
@@ -721,7 +722,8 @@
             "Add Title": "Add Title",
             "Invalid video": "Invalid video",
             "Non-embeddable video": "Non-embeddable video",
-            "Private video": "Private video"
+            "Private video": "Private video",
+            "Unplayable video": "Unplayable video"
         }
     }
 }
