版本: 5129 作者: mars 日期: 2013/8/1 10:01 訊息: 1. PCS 4.0 優化列表 4 提示文字"The mobile notification will instant send, when user pressed OK or Enter."改成"If users press OK or Enter, the mobile notification will be send immediately." ---- 異動 : /channel-poi.html 異動 : /epcurate-curation.html 異動 : /lang/en.json 異動 : /lang/zj.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5219 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -487,7 +487,7 @@
             "Hour": "Hour",
             "Minute": "Minute",
             "Mobile Notification Message": "Mobile Notification Message",
-            "The mobile notification will instant send, when user pressed OK or Enter.": "The mobile notification will instant send, when user pressed OK or Enter."
+            "If users press OK or Enter, the mobile notification will be send immediately.": "If users press OK or Enter, the mobile notification will be send immediately."
         }
     },
     "episode-list": {
@@ -676,7 +676,7 @@
             "Hour": "Hour",
             "Minute": "Minute",
             "Mobile Notification Message": "Mobile Notification Message",
-            "The mobile notification will instant send, when user pressed OK or Enter.": "The mobile notification will instant send, when user pressed OK or Enter."
+            "If users press OK or Enter, the mobile notification will be send immediately.": "If users press OK or Enter, the mobile notification will be send immediately."
         },
         "title-card": {
             "Text": "Text",
