版本: 5250 作者: mars 日期: 2013/8/6 16:14 訊息: 1. channel list add turorial for empty channel list ---- 異動 : /index.html 異動 : /javascripts/v2/func.index.js 異動 : /lang/en.json 異動 : /lang/zh.json 新增 : /stylesheetsv3/com-9x9-cycle.css 新增 : /images/banner_ch_01.png 新增 : /images/banner_ch_02.png
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5250 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -332,7 +332,11 @@
             "Channel settings": "Channel settings",
             "Delete this channel": "Delete this channel",
             "No Episodes": "No Episodes",
-            "'s Favorite": "'s Favorite"
+            "'s Favorite": "'s Favorite",
+            "You don't have any channels yet": "You don't have any channels yet",
+            "Create a new channel": "Create a new channel",
+            "Create your own <strong>personal and unique</strong> channel.": "Create your own <strong>personal and unique</strong> channel.",
+            "And online videos into episode and start to <strong>curate your own channel.</strong>": "And online videos into episode and start to <strong>curate your own channel.</strong>"
         }
     },
     "cms-settings": {
