版本: 5259 作者: mars 日期: 2013/8/7 17:30 訊息: 1. channel logo未顯示為方型 2. epcurate-publish.html https://docs.google.com/spreadsheet/ccc?key=0AjDDP--2Cg6AdHJKYkRkUW56cVBYS25kZ1l4Q0RFdWc#gid=2 row 21 / 22 / 23 function complate, need css fix ---- 異動 : /stylesheets/channel.css 異動 : /epcurate-publish.html 異動 : /lang/en.json 異動 : /lang/zh.json 異動 : /javascripts/v3/domready.epcurate.js 異動 : /javascripts/v3/func.epcurate.js 新增 : /stylesheetsv3/epcurate-publish.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5259 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -565,7 +565,9 @@
             "< Back to Curation": "< Back to Curation",
             "Leave": "Leave",
             "Save": "Save",
-            "Please fill in all required fields.": "Please fill in all required fields."
+            "Please fill in all required fields.": "Please fill in all required fields.",
+            "Best within 20 characters.": "Best within 20 characters.",
+            "Best within 52 characters.": "Best within 52 characters."
         }
     },
     "epcurate-curation": {
