版本: 5304 作者: mars 日期: 2013/8/13 11:01 訊息: 1. janet request CMS header 中文介面的 "9x9.tv應用程式" 改為 "9x9.tv app" ---- 異動 : /lang/zh.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5304 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "header": {
         "9x9.tv Official Web": "9x9.tv官方網站",
-        "Watch 9x9.tv on the Web": "9x9.tv應用程式",
+        "Watch 9x9.tv on the Web": "9x9.tv app",
         "Partner Sign-in": "合作夥伴登入",
         "Log out": "登出"
     },
