版本: 5355 作者: mars 日期: 2013/8/19 10:47 訊息: 1. Cunnie icon 調整 2. 翻譯調整 ---- 異動 : /images/icon_nav.png 異動 : /lang/zh.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5355 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -582,12 +582,12 @@
             "Publish": "發佈設定"
         },
         "epcurate-form": {
-            "Add Video": "匯入影片",
+            "Add Video": "新增影片",
             "Edit": "編輯",
             "POI & interactive event": "互動時間點與事件",
-            "Add video by URL": "匯入影片連結",
+            "Add video by URL": "新增影片連結",
             "Add": "匯入",
-            "+ Add videos here": "+ 在此加入<br />影片",
+            "+ Add videos here": "+ 在此新增<br />影片",
             "Leave": "離開",
             "Save": "儲存",
             "Next to Publish >": "前往發佈設定 >"
