版本: 5360 作者: mars 日期: 2013/8/19 15:13 訊息: 1. index.html move to v3 version ---- 異動 : /index.html 異動 : /javascripts/v3/domready.index.js 異動 : /javascripts/v3/func.index.js 異動 : /lang/zh.json 異動 : /stylesheetsv3/channnel.css 異動 : /stylesheetsv3/epcurate-publish.css 異動 : /stylesheetsv3/episode.css 異動 : /stylesheetsv3/style.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5360 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -316,7 +316,8 @@
         "title-func": {
             "My Channels": "我的頻道",
             "Reorder channels": "排序頻道",
-            "Save order": "儲存排序"
+            "Save order": "儲存排序",
+            "Create a new channel": "創建頻道"
         },
         "channel-list": {
             "Get URL": "網址",
