Restore poll event template. Correct event type id. Add poll event language data.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5490 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -647,6 +647,7 @@
             "Add interactive event": "Add interactive event",
             "Choose a type": "Choose a type",
             "Hyper Link": "Hyper Link",
+            "Poll": "Poll",
             "User can go to watch another 9x9.tv channel or episode.": "User can go to watch another 9x9.tv channel or episode.",
             "Scheduled Notification": "Scheduled Notification",
             "Send a scheduled notification to user to get more information.": "Send a scheduled notification to user to get more information.",
