--- a/lang/zh.json
+++ b/lang/zh.json
@@ -649,6 +649,7 @@
             "Add interactive event": "設定互動事件",
             "Choose a type": "選擇事件類型",
             "Hyper Link": "超連結頻道",
+            "Poll": "投票",
             "User can go to watch another 9x9.tv channel or episode.": "使用者可前往觀賞另一個9x9.tv頻道或節目。",
             "Scheduled Notification": "排程通知",
             "Send a scheduled notification to user to get more information.": "設定排程通知，使用者可於特定時間獲得更多資訊。",
