--- a/lang/en.json
+++ b/lang/en.json
@@ -182,6 +182,50 @@
             "your upload file is large than 500KB, please reupload file.": "your upload file is large than 500KB, please reupload file."
         }
     },
+    "store-promotion": {
+        "html-title": {
+            "9x9.tv - Store Manage": "9x9.tv - Store Manage Promotion"
+        },
+        "func-nav": {
+            "My Portal": "My Portal",
+            "Channel Store": "Channel Store",
+            "Brand Settings": "Brand Settings"
+        },
+        "title-func": {
+            "Channel Store": "Channel Store",
+            "Portal": "Preview",
+            "Preview": "Preview",
+            "Save": "Save",
+            "Set Name": "Set Name"
+        },
+        "store-layer": {
+            "xxx channels in category:": "{0} channels in category:",
+            "You can manage your channel store manually.": "You can manage your channel store manually.",
+            "Collapse": "Collapse",
+            "Expand Category": "Expand Category",
+            "Load More": "Load More",
+            "Processing...": "Processing..."
+        },
+        "channel-list": {
+            "Sorted by": "Sorted by",
+            "Updated time": "Updated time ",
+            "Customized Order": "Customized Order",
+            "Best within 20 characters": "Best within 20 characters",
+            "Set Name": "Set Name ",
+            "Channel List": "Channel List ",
+            "Channels": "Channels",
+            "Add channels": "Add channels",
+            "Add channels sub": "",
+            "Please input channel URL": "Please input channel URL",
+            "Please input channel name or curator name": "Please input channel name or curator name",
+            "Set on top": "Set on top",
+            "Remove from top": "Remove from top",
+            "Remove channel": "Remove channel",
+            "Add channel": "Add channel",
+            "You can only set 4 channels on top": "You can only set 4 channels on top",
+            "Set name can't be empty": "Set name can't be empty"
+        }
+    },
     "store-manage": {
         "html-title": {
             "9x9.tv - Store Manage": "9x9.tv - Store Manage"
@@ -647,6 +691,7 @@
             "Add interactive event": "Add interactive event",
             "Choose a type": "Choose a type",
             "Hyper Link": "Hyper Link",
+            "Poll": "Poll",
             "User can go to watch another 9x9.tv channel or episode.": "User can go to watch another 9x9.tv channel or episode.",
             "Scheduled Notification": "Scheduled Notification",
             "Send a scheduled notification to user to get more information.": "Send a scheduled notification to user to get more information.",
