--- a/lang/zh.json
+++ b/lang/zh.json
@@ -687,7 +687,8 @@
             "Hour": "時",
             "Minute": "分",
             "Mobile Notification Message": "行動裝置通知內容",
-            "If users press OK or Enter, the mobile notification will be send immediately.": "當使用者按下OK或Enter時，通知會即時送出。"
+            "If users press OK or Enter, the mobile notification will be send immediately.": "當使用者按下OK或Enter時，通知會即時送出。",
+            "Please decrease the number of text. The text of display text and button text are longer than the video width.": "訊息文字與按鈕文字總字數長度超過影片寬度，請縮減字數。"
         },
         "title-card": {
             "Text": "字卡內文",
