--- a/lang/zh.json
+++ b/lang/zh.json
@@ -660,12 +660,13 @@
             "Interactive event : Hyper Link": "互動事件 : 超連結頻道",
             "Interactive event : Scheduled Notification": "互動事件 : 排程通知",
             "Interactive event : Instant Notification": "互動事件 : 即時通知",
+            "Interactive event : Poll": "互動事件 : 投票",
             "PREVIEW": "預覽畫面",
             "There is no valid video to preview.": "找不到可有效預覽的畫面。",
             "Display text": "訊息文字",
             "Input display text": "輸入訊息文字",
             "Button text": "按鈕文字",
-            "Add button": "增加按鈕",
+            "Add button": "新增按鈕",
             "Input button text": "輸入按鈕文字",
             "Hyper link": "連結網址",
             "Input 9x9 channel or episode URL": "輸入9x9頻道或節目網址",
