--- a/lang/zh.json
+++ b/lang/zh.json
@@ -325,6 +325,7 @@
         "title-func": {
             "My Portal": "我的入口",
             "Portal": "我的入口",
+            "Promotion category provides the best program impression in program store.": "Promotion category provides the best program impression in program store.",
             "Preview": "預覽",
             "Save": "儲存",
             "Channel Name": "頻道名稱"
@@ -342,6 +343,11 @@
             "Please fill in the program url to search.": "請輸入節目網址搜尋",
             "Please fill in the correct url.": "請輸入正確網址搜尋",
             "Please fill in the keywords to search.": "請輸入關鍵字搜尋",
+            "Processing...": "處理中..."
+        },
+        "overlay": {
+            "Are you sure to remove this channel set?": "你確定要刪除這個頻道？",
+            "Unsaved changes will be lost, are you sure you want to leave?": "未儲存資料將遺失，確定離開？",
             "Processing...": "處理中..."
         },
         "portal-layer": {
